# robotics

./: .gitignore  INTERWOVEN_VC_BRIEF.md  QUICKSTART.md  README.md  Start-Camera.ps1  TESTING.md  UI_ENHANCEMENTS.md  WINDOWS_CAMERA_SETUP.md  http_camera_bridge.py  linux_camera_publisher.py  restart-windows-camera.ps1  simple_windows_camera.py  start-camera-1.bat  start_demo.sh  start_linux_camera.sh  stop_demo.sh  test-camera.sh  test_all_cameras.py  windows-camera-setup.ps1
archive/: README.md
archive/legacy-tkinter-ui/: demo_ui.py  run_demo_ui.sh
docs/: ARCHITECTURE.md  CAMERA_ID_1_INSTRUCTIONS.md  CAMERA_SCRIPTS.md  CLAUDE.md  COMMITMENT_BINDING_IMPLEMENTATION.md  README.md  SCRIPTS.md  SECURITY_FIXES.md  UI_ENHANCEMENTS.md
scripts/: README.md  setup_ros.sh
src/zkml_guard/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
src/zkml_guard/config/: twist_mux.yaml  zkml_guard.params.yaml
src/zkml_guard/launch/: zkml_guard_demo.launch.py  zkml_guard_proof.launch.py
src/zkml_guard/zkml_guard/: jolt.py  zkml_guard_node.py
tools/: Cargo.toml  Dockerfile  build_helper.sh
tools/atlas_argmax_prover/: Cargo.toml
tools/atlas_argmax_prover/src/: main.rs
tools/jolt-atlas/: Cargo.toml
tools/jolt-atlas/atlas_argmax_prover/: Cargo.toml
tools/jolt-atlas/onnx-tracer/models/sigmoid/: gen.py  network.onnx
tools/jolt-atlas/onnx-tracer/src/: builder.rs  constants.rs  trace_types.rs
tools/jolt-atlas/onnx-tracer/src/graph/: model.rs  utilities.rs
tools/jolt-atlas/onnx-tracer/src/ops/: hybrid.rs  lookup.rs  poly.rs
tools/jolt-atlas/onnx-tracer/src/tensor/: ops.rs
tools/jolt-atlas/zkml-jolt-core/: Cargo.toml
tools/jolt-atlas/zkml-jolt-core/src/jolt/: bytecode.rs  mod.rs
tools/jolt-atlas/zkml-jolt-core/src/jolt/execution_trace/: mod.rs
tools/jolt-atlas/zkml-jolt-core/src/jolt/instruction/: div.rs  ge.rs  mod.rs  rebase_scale.rs  sigmoid.rs  test.rs
tools/jolt-atlas/zkml-jolt-core/src/jolt/precompiles/: matmult.rs
tools/jolt-atlas/zkml-jolt-core/src/jolt/tensor_heap/: output_check.rs
tools/jolt-atlas/zkml-jolt-core/src/utils/: mod.rs
tools/robotics-ui/: .env.example  CHANGELOG.md  README.md  event_proxy.py  frame_proxy.py  package.json  server.js  snapshot.py  test-server.sh
tools/robotics-ui/public/: demo.html  index.html  test-events.html  test-frame.html
