<?xml version="1.0"?>
<package format="3">
  <name>zkml_guard</name>
  <version>0.0.1</version>
  <description>Proof-gated STOP for twist_mux via JOLT Atlas zkML (ROS 2, webcam)</description>
  <maintainer email="devnull@example.com">zkml</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
