[package]
name = "atlas_argmax_prover"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15"
ndarray-npy = "0.8"
sha3 = "0.10"
ark-bn254 = "0.5"
zkml-jolt-core = { path = "../zkml-jolt-core" }
onnx-tracer = { path = "../onnx-tracer" }
jolt-core = { git = "https://github.com/ICME-Lab/zkml-jolt", package = "jolt-core", branch = "zkml-jolt" }
